err/gypsy.err
Listing '.'...
Listing './bin'...
Listing './gypsy'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gypsy'...
Listing './lib/python3.5/site-packages/gypsy/auth'...
Listing './lib/python3.5/site-packages/gypsy/db'...
Listing './lib/python3.5/site-packages/gypsy/db/fields'...
Listing './lib/python3.5/site-packages/gypsy/dbfields'...
Listing './lib/python3.5/site-packages/gypsy/management'...
Listing './lib/python3.5/site-packages/gypsy/management/commands'...
Listing './lib/python3.5/site-packages/gypsy/sessions'...
Compiling './lib/python3.5/site-packages/gypsy/sessions/tokyotyrant.py'...
***   File "./lib/python3.5/site-packages/gypsy/sessions/tokyotyrant.py", line 49
    except pytyrant.TyrantError, exc:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gypsy/storage'...
Listing './lib/python3.5/site-packages/gypsy/storage/backends'...
Compiling './lib/python3.5/site-packages/gypsy/storage/backends/s3.py'...
***   File "./lib/python3.5/site-packages/gypsy/storage/backends/s3.py", line 39
    except (S3ResponseError, BadStatusLine, ValueError), exc:
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gypsy/utils'...
Compiling './lib/python3.5/site-packages/gypsy/utils/spamish.py'...
***   File "./lib/python3.5/site-packages/gypsy/utils/spamish.py", line 51
    except (urllib2.HTTPError, urllib2.URLError, IOError), e:
                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gypsy-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
